infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: islam1978/stubhub-client
          resources:
            limits:
              memory: "2056Mi"
              cpu: "4000m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
