infra/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-delp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.2
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
          resources:
            limits:
              memory: "1028Mi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
      protocol: TCP
    - name: monitoring
      port: 8222
      targetPort: 8222
      protocol: TCP
