infra/k8s/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: islam1978/stubhub-tickets
          resources:
            limits:
              memory: "1024Mi"
              cpu: "2000m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-db-depl
spec:
  selector:
    matchLabels:
      app: tickets-db
  template:
    metadata:
      labels:
        app: tickets-db
    spec:
      containers:
        - name: tickets-db
          image: mongo
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-db-srv
spec:
  selector:
    app: tickets-db
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
